--- a/src/components/About/style.scss
+++ b/src/components/About/style.scss
@@ -16,13 +16,15 @@
 
         width: 65vw;
 
-        overflow: hidden;
-
         .AboutImage {
             width: 140%;
 
             img {
                 width: 100%;
+
+                opacity: 0;
+                filter: blur(10px);
+                transform: translateX(200px);
             }
         }
 
@@ -31,19 +33,28 @@
             flex-direction: column;
             align-items: flex-start;
             justify-content: center;
-            row-gap: 1rem;
+            row-gap: 0.5rem;
 
             text-align: right;
 
             font-family: $font-2;
             font-size: 1.25rem;
-            font-weight: 200;
+            font-weight: 300;
 
             h2 {
                 text-transform: uppercase;
                 font-size: 3rem;
                 font-weight: 600;
                 font-style: italic;
+
+                transform: translateX(-200px);
+                opacity: 0;
+                filter: blur(10px);
+            }
+
+            p {
+                transform: translateY(25px) scale(0.9);
+                opacity: 0;
             }
 
             button {
@@ -59,6 +70,9 @@
                 font-style: italic;
                 font-size: 1.25rem;
                 font-weight: 500;
+
+                transform: translateY(50px);
+                opacity: 0;
 
                 svg {
                     width: 10px;
