--- a/src/components/Navbar/style.scss
+++ b/src/components/Navbar/style.scss
@@ -11,6 +11,8 @@ $navbar-height: 120px;
     align-items: center;
     justify-content: space-between;
 
+    z-index: 10;
+
     padding: 2rem 4rem;
 
     height: $navbar-height;
